fix: remove white bar on top and bottom on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,11 @@
     text-size-adjust: 100%;
   }
 }
+
+html,
+body,
+#root {
+  background-color: #000000 !important;
+  margin: 0;
+  padding: 0;
+}
